yaml/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2021-06-07T17:04:36Z"
  generation: 1
  labels:
    app: api
  name: api
  namespace: app
  resourceVersion: "6361340"
  selfLink: /apis/apps/v1/namespaces/app/deployments/api
  uid: 5be4a1d3-07a3-4fdf-80b4-20be3572533f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - image: ecompertamina.azurecr.io/content-api
        imagePullPolicy: Always
        name: content-api
        ports:
        - containerPort: 3001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2021-06-07T17:04:36Z"
    lastUpdateTime: "2021-06-07T17:04:47Z"
    message: ReplicaSet "api-6858cf76c9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2021-06-10T01:07:11Z"
    lastUpdateTime: "2021-06-10T01:07:11Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
