yaml/mongodb-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: db
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
